tests/fixtures/syntax/valid/comment_after_case_block_close.repor
case "comment after case block close" {
  $ true
  assert {
    exit 0
  }
} // trailing comment on the case close line
