tests/fixtures/syntax/invalid/comment_swallows_single_line_assertion_close_brace.repor
case "x" {
  $ true
  assert { exit 0 // comment swallows the closing brace on this line
}
